# amplifier-app-cost-viewer

./: .gitignore  README.md  bundle.md  pyproject.toml
.amplifier/: settings.yaml
context/: dev-instructions.md
docs/plans/: 2026-04-24-cost-viewer-design.md  2026-04-24-cost-viewer-phase1-backend.md  2026-04-24-cost-viewer-phase2-frontend.md  2026-04-26-cost-viewer-v2-design.md  2026-04-26-cost-viewer-v2-plan.md  2026-04-26-cost-viewer-v2-polish.md  2026-04-26-cost-viewer-v3-design.md  2026-04-26-cost-viewer-v3-phase1.md  2026-04-26-cost-viewer-v3-phase2.md
docs/research/: cost-work-outline.md  token-cost-analysis.md
scanner/: Cargo.toml
scanner/src/: db.rs  main.rs  pricing.rs  scan.rs
scripts/: update_pricing.py
src/amplifier_module_hook_observability/: __init__.py  jsonl_writer.py  langfuse_writer.py  pricing.py
src/hook_observability/: __init__.py  jsonl_writer.py
tests/: conftest.py  test_hook.py  test_jsonl_writer.py  test_langfuse_writer.py  test_pricing.py
viewer/: pyproject.toml
viewer/amplifier_app_cost_viewer/: __init__.py  __main__.py  db.py  pricing.py  reader.py  server.py
viewer/amplifier_app_cost_viewer/static/: app.js  index.html  style.css
viewer/tests/: conftest.py  test_app_js.py  test_live_sessions.py  test_perf_fixes.py  test_pricing.py  test_reader.py  test_scaffold.py  test_server.py  test_static_shell.py
