[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [project]
    name = "hook-observability"
    version = "0.1.0"
    description = "Amplifier hook module for token cost observability"
    requires-python = ">=3.11"
    license = { text = "MIT" }
    # amplifier-core is a peer dependency — do NOT declare it here
    dependencies = []

    [project.optional-dependencies]
    langfuse = ["langfuse>=3.0.0"]
    dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

    [project.entry-points."amplifier.modules"]
    hook-observability = "amplifier_module_hook_observability:mount"

    [tool.hatch.build.targets.wheel]
    packages = ["src/amplifier_module_hook_observability"]

    [tool.pytest.ini_options]
    testpaths = ["tests"]
    asyncio_mode = "auto"
    asyncio_default_fixture_loop_scope = "function"
    