[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-app-cost-viewer"
version = "0.1.0"
description = "Amplifier App Cost Viewer — session cost and performance"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
amplifier-cost-viewer = "amplifier_app_cost_viewer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_app_cost_viewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
